# PiCEx2

./: CMakeLists.txt  Ex2.1.c  Ex2.2.c  Ex2.3.c  Ex2.4.c  Ex2.5.c  Ex2.7.c  Ex2.8.c  calculations.c  main.c
