cmake_minimum_required(VERSION 3.21)
project(PiCEx2 C)

set(CMAKE_C_STANDARD 99)

add_executable(main.c main.c)
add_executable(Ex2.1.c Ex2.1.c)
add_executable(Ex2.2.c Ex2.2.c)
add_executable(Ex2.3.c Ex2.3.c)
add_executable(Ex2.4.c Ex2.4.c)
add_executable(Ex2.5.c Ex2.5.c)

add_executable(Ex2.7.c Ex2.7.c)
add_executable(Ex2.8.c Ex2.8.c)